# internal/orchestrator/transport/handlers/requests.go
@@ -9,15 +9,18 @@ type CreateExpressionResp struct {
 	ID int64 `json:"id"`
 }
 type GetExpressionReq struct {
-	ID *int64 `uri:"id" binding:"required"`
+	ID *int64 `uri:"id" binding:"required,gte=1"`
 }
 
 type GetExpressionResp struct {
 	ID     int64    `json:"id"`
 	Status string   `json:"status"`
-	Result *float64 `json:"omitempty,result"`
+	Result *float64 `json:"result,omitempty"`
 }
-
+type GetExpressionsReq struct {
+	Size int `form:"size" binding:"omitempty,gte=0"`
+	Page int `form:"page" binding:"omitempty,gte=0"`
+}
 type GetTaskResp struct {
 	ID            int64            `json:"id"`
 	ExpressionID  int64            `json:"expression_id"`
@@ -27,8 +30,8 @@ type GetTaskResp struct {
 	OperationTime int64            `json:"operation_time"`
 }
 
-type GetResultReq struct {
-	ID           *int64   `json:"id" binding:"required"`
+type PostResult struct {
+	ID           *int64   `json:"id" binding:"required,gte=1"`
 	ExpressionID *int64   `json:"expression_id" binding:"required"`
 	Result       *float64 `json:"result" binding:"required"`
 }
